04/26/2023 CloudFormation schemas in us-east-1; Refresh existing schemas.

--- a/internal/service/cloudformation/schemas/AWS_AppSync_DomainName.json
+++ b/internal/service/cloudformation/schemas/AWS_AppSync_DomainName.json
@@ -37,7 +37,6 @@
   ],
   "readOnlyProperties": [
     "/properties/AppSyncDomainName",
-    "/properties/DomainName",
     "/properties/HostedZoneId"
   ],
   "createOnlyProperties": [
@@ -66,6 +65,11 @@
     "read": {
       "permissions": [
         "appsync:GetDomainName"
+      ]
+    },
+    "list": {
+      "permissions": [
+        "appsync:ListDomainNames"
       ]
     }
   }
