--- a/internal/service/cloudformation/schemas/AWS_ResilienceHub_App.json
+++ b/internal/service/cloudformation/schemas/AWS_ResilienceHub_App.json
@@ -122,6 +122,13 @@
       ]
     }
   },
+  "tagging": {
+    "taggable": true,
+    "tagOnCreate": true,
+    "tagUpdatable": true,
+    "cloudFormationSystemTags": false,
+    "tagProperty": "/properties/Tags"
+  },
   "additionalProperties": false,
   "required": [
     "Name",
