--- a/internal/service/cloudformation/schemas/AWS_ImageBuilder_DistributionConfiguration.json
+++ b/internal/service/cloudformation/schemas/AWS_ImageBuilder_DistributionConfiguration.json
@@ -294,6 +294,9 @@
   "createOnlyProperties": [
     "/properties/Name"
   ],
+  "tagging": {
+    "taggable": false
+  },
   "handlers": {
     "create": {
       "permissions": [
