--- a/internal/service/cloudformation/schemas/AWS_ServiceCatalogAppRegistry_AttributeGroupAssociation.json
+++ b/internal/service/cloudformation/schemas/AWS_ServiceCatalogAppRegistry_AttributeGroupAssociation.json
@@ -40,6 +40,10 @@
     "/properties/AttributeGroupArn",
     "/properties/Id"
   ],
+  "createOnlyProperties": [
+    "/properties/Application",
+    "/properties/AttributeGroup"
+  ],
   "primaryIdentifier": [
     "/properties/Id"
   ],
