--- a/internal/service/cloudformation/schemas/AWS_ServiceCatalogAppRegistry_ResourceAssociation.json
+++ b/internal/service/cloudformation/schemas/AWS_ServiceCatalogAppRegistry_ResourceAssociation.json
@@ -46,6 +46,11 @@
     "/properties/ResourceArn",
     "/properties/Id"
   ],
+  "createOnlyProperties": [
+    "/properties/Application",
+    "/properties/Resource",
+    "/properties/ResourceType"
+  ],
   "primaryIdentifier": [
     "/properties/Id"
   ],
