--- a/internal/service/cloudformation/schemas/AWS_ImageBuilder_InfrastructureConfiguration.json
+++ b/internal/service/cloudformation/schemas/AWS_ImageBuilder_InfrastructureConfiguration.json
@@ -158,6 +158,9 @@
   "createOnlyProperties": [
     "/properties/Name"
   ],
+  "tagging": {
+    "taggable": false
+  },
   "handlers": {
     "create": {
       "permissions": [
