--- a/internal/service/cloudformation/schemas/AWS_SageMaker_App.json
+++ b/internal/service/cloudformation/schemas/AWS_SageMaker_App.json
@@ -175,7 +175,8 @@
     "/properties/AppType",
     "/properties/DomainId",
     "/properties/UserProfileName",
-    "/properties/Tags"
+    "/properties/Tags",
+    "/properties/ResourceSpec"
   ],
   "writeOnlyProperties": [
     "/properties/Tags"
