06/14/2023 CloudFormation schemas in us-east-1; Refresh existing schemas.

--- a/internal/service/cloudformation/schemas/AWS_IVS_RecordingConfiguration.json
+++ b/internal/service/cloudformation/schemas/AWS_IVS_RecordingConfiguration.json
@@ -150,6 +150,8 @@
     "create": {
       "permissions": [
         "ivs:CreateRecordingConfiguration",
+        "ivs:GetRecordingConfiguration",
+        "ivs:TagResource",
         "iam:CreateServiceLinkedRole",
         "iam:PutRolePolicy",
         "iam:AttachRolePolicy",
@@ -160,13 +162,19 @@
     },
     "read": {
       "permissions": [
-        "ivs:GetRecordingConfiguration"
+        "ivs:GetRecordingConfiguration",
+        "s3:GetBucketLocation",
+        "ivs:ListTagsForResource"
       ]
     },
     "update": {
       "permissions": [
+        "ivs:GetRecordingConfiguration",
         "sts:AssumeRole",
         "iam:CreateServiceLinkedRole",
+        "iam:PutRolePolicy",
+        "iam:AttachRolePolicy",
+        "s3:ListBucket",
         "ivs:TagResource",
         "ivs:UntagResource",
         "ivs:ListTagsForResource"
@@ -175,12 +183,15 @@
     "delete": {
       "permissions": [
         "ivs:DeleteRecordingConfiguration",
+        "ivs:UntagResource",
         "iam:CreateServiceLinkedRole"
       ]
     },
     "list": {
       "permissions": [
-        "ivs:ListRecordingConfigurations"
+        "ivs:ListRecordingConfigurations",
+        "s3:GetBucketLocation",
+        "ivs:ListTagsForResource"
       ]
     }
   }
