--- a/internal/service/cloudformation/schemas/AWS_ServiceCatalogAppRegistry_AttributeGroup.json
+++ b/internal/service/cloudformation/schemas/AWS_ServiceCatalogAppRegistry_AttributeGroup.json
@@ -76,6 +76,7 @@
     },
     "update": {
       "permissions": [
+        "servicecatalog:GetAttributeGroup",
         "servicecatalog:UpdateAttributeGroup",
         "servicecatalog:ListTagsForResource",
         "servicecatalog:TagResource",
