07/19/2023 CloudFormation schemas in us-east-1; Refresh existing schemas.

--- a/internal/service/cloudformation/schemas/AWS_AppFlow_Flow.json
+++ b/internal/service/cloudformation/schemas/AWS_AppFlow_Flow.json
@@ -964,6 +964,29 @@
         },
         "CustomProperties": {
           "$ref": "#/definitions/CustomProperties"
+        },
+        "DataTransferApi": {
+          "type": "object",
+          "properties": {
+            "Name": {
+              "type": "string",
+              "maxLength": 64,
+              "pattern": "[\\w/-]+"
+            },
+            "Type": {
+              "type": "string",
+              "enum": [
+                "SYNC",
+                "ASYNC",
+                "AUTOMATIC"
+              ]
+            }
+          },
+          "required": [
+            "Name",
+            "Type"
+          ],
+          "additionalProperties": false
         }
       },
       "required": [
