--- a/internal/service/cloudformation/schemas/AWS_CodeDeploy_DeploymentConfig.json
+++ b/internal/service/cloudformation/schemas/AWS_CodeDeploy_DeploymentConfig.json
@@ -117,6 +117,7 @@
     },
     "delete": {
       "permissions": [
+        "codedeploy:GetDeploymentConfig",
         "codedeploy:DeleteDeploymentConfig"
       ]
     },
