--- a/internal/service/cloudformation/schemas/AWS_ImageBuilder_InfrastructureConfiguration.json
+++ b/internal/service/cloudformation/schemas/AWS_ImageBuilder_InfrastructureConfiguration.json
@@ -176,6 +176,8 @@
     },
     "update": {
       "permissions": [
+        "iam:PassRole",
+        "sns:Publish",
         "imagebuilder:GetInfrastructureConfiguration",
         "imagebuilder:UpdateInfrastructureConfiguration"
       ]
