--- a/internal/service/cloudformation/schemas/AWS_ApplicationInsights_Application.json
+++ b/internal/service/cloudformation/schemas/AWS_ApplicationInsights_Application.json
@@ -486,7 +486,7 @@
           "type": "string",
           "minLength": 1,
           "maxLength": 260,
-          "pattern": "^[a-zA-Z0-9_ \\\\/-]$"
+          "pattern": "^[a-zA-Z0-9_ \\\\/-]+$"
         },
         "EventLevels": {
           "description": "The levels of event to log. ",
@@ -582,75 +582,43 @@
   "readOnlyProperties": [
     "/properties/ApplicationARN"
   ],
+  "writeOnlyProperties": [
+    "/properties/ComponentMonitoringSettings",
+    "/properties/LogPatternSets",
+    "/properties/CustomComponents",
+    "/properties/GroupingType",
+    "/properties/OpsItemSNSTopicArn"
+  ],
   "createOnlyProperties": [
-    "/properties/ResourceGroupName"
+    "/properties/ResourceGroupName",
+    "/properties/GroupingType"
   ],
   "handlers": {
     "create": {
       "permissions": [
-        "applicationinsights:CreateApplication",
-        "applicationinsights:DescribeApplication",
-        "applicationinsights:CreateComponent",
-        "applicationinsights:DescribeComponent",
-        "applicationinsights:CreateLogPattern",
-        "applicationinsights:DescribeLogPattern",
-        "applicationinsights:DescribeComponentConfigurationRecommendation",
-        "applicationinsights:UpdateComponentConfiguration",
-        "applicationinsights:ListComponents"
+        "*"
       ],
       "timeoutInMinutes": 600
     },
     "read": {
       "permissions": [
-        "applicationinsights:DescribeApplication",
-        "applicationinsights:ListTagsForResource",
-        "applicationinsights:DescribeComponent",
-        "applicationinsights:ListComponents",
-        "applicationinsights:DescribeLogPattern",
-        "applicationinsights:ListLogPatterns",
-        "applicationinsights:ListLogPatternSets"
+        "*"
       ]
     },
     "update": {
       "permissions": [
-        "applicationinsights:CreateApplication",
-        "applicationinsights:DescribeApplication",
-        "applicationinsights:UpdateApplication",
-        "applicationinsights:TagResource",
-        "applicationinsights:UntagResource",
-        "applicationinsights:ListTagsForResource",
-        "applicationinsights:CreateComponent",
-        "applicationinsights:DescribeComponent",
-        "applicationinsights:DeleteComponent",
-        "applicationinsights:ListComponents",
-        "applicationinsights:CreateLogPattern",
-        "applicationinsights:DeleteLogPattern",
-        "applicationinsights:DescribeLogPattern",
-        "applicationinsights:ListLogPatterns",
-        "applicationinsights:ListLogPatternSets",
-        "applicationinsights:UpdateLogPattern",
-        "applicationinsights:DescribeComponentConfiguration",
-        "applicationinsights:DescribeComponentConfigurationRecommendation",
-        "applicationinsights:UpdateComponentConfiguration"
+        "*"
       ],
       "timeoutInMinutes": 600
     },
     "delete": {
       "permissions": [
-        "applicationinsights:DeleteApplication",
-        "applicationinsights:DescribeApplication"
+        "*"
       ]
     },
     "list": {
       "permissions": [
-        "applicationinsights:ListApplications",
-        "applicationinsights:DescribeApplication",
-        "applicationinsights:ListTagsForResource",
-        "applicationinsights:DescribeComponent",
-        "applicationinsights:ListComponents",
-        "applicationinsights:DescribeLogPattern",
-        "applicationinsights:ListLogPatterns",
-        "applicationinsights:ListLogPatternSets"
+        "*"
       ]
     }
   },
