--- a/internal/service/cloudformation/schemas/AWS_GroundStation_Config.json
+++ b/internal/service/cloudformation/schemas/AWS_GroundStation_Config.json
@@ -304,12 +304,13 @@
     "create": {
       "permissions": [
         "groundstation:CreateConfig",
-        "groundstation:TagResource"
+        "groundstation:TagResource",
+        "iam:PassRole"
       ]
     },
     "read": {
       "permissions": [
-        "groundstation:DescribeConfig",
+        "groundstation:GetConfig",
         "groundstation:ListTagsForResource"
       ]
     },
@@ -318,7 +319,8 @@
         "groundstation:UpdateConfig",
         "groundstation:ListTagsForResource",
         "groundstation:TagResource",
-        "groundstation:UntagResource"
+        "groundstation:UntagResource",
+        "iam:PassRole"
       ]
     },
     "delete": {
