--- a/internal/service/cloudformation/schemas/AWS_IoT_DomainConfiguration.json
+++ b/internal/service/cloudformation/schemas/AWS_IoT_DomainConfiguration.json
@@ -176,7 +176,9 @@
         "iot:CreateDomainConfiguration",
         "iot:UpdateDomainConfiguration",
         "iot:DescribeDomainConfiguration",
-        "iot:ListTagsForResource"
+        "iot:TagResource",
+        "iot:ListTagsForResource",
+        "acm:GetCertificate"
       ]
     },
     "read": {
@@ -196,6 +198,7 @@
     },
     "delete": {
       "permissions": [
+        "iot:DescribeDomainConfiguration",
         "iot:DeleteDomainConfiguration",
         "iot:UpdateDomainConfiguration"
       ]
