--- a/internal/service/cloudformation/schemas/AWS_Amplify_App.json
+++ b/internal/service/cloudformation/schemas/AWS_Amplify_App.json
@@ -287,6 +287,7 @@
   "handlers": {
     "create": {
       "permissions": [
+        "amplify:GetApp",
         "amplify:CreateApp",
         "amplify:TagResource",
         "codecommit:GetRepository",
@@ -299,15 +300,18 @@
     },
     "delete": {
       "permissions": [
+        "amplify:GetApp",
         "amplify:DeleteApp",
         "codecommit:GetRepository",
         "codecommit:GetRepositoryTriggers",
+        "codecommit:PutRepositoryTriggers",
         "sns:Unsubscribe",
         "iam:PassRole"
       ]
     },
     "list": {
       "permissions": [
+        "amplify:GetApp",
         "amplify:ListApps",
         "amplify:ListTagsForResource",
         "iam:PassRole"
@@ -324,6 +328,7 @@
     },
     "update": {
       "permissions": [
+        "amplify:GetApp",
         "amplify:UpdateApp",
         "amplify:ListTagsForResource",
         "amplify:TagResource",
