Include top-level 'github.com/aws/aws-sdk-go-v2' module in 'aws-sdk-go' dependabot group.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -16,6 +16,7 @@ updates:
       aws-sdk-go:
         patterns:
           - "github.com/aws/aws-sdk-go"
+          - "github.com/aws/aws-sdk-go-v2"
           - "github.com/aws/aws-sdk-go-v2/*"
     ignore:
       # terraform-plugin-go should only be updated via terraform-plugin-framework
