08/09/2023 CloudFormation schemas in us-east-1; Refresh existing schemas.

--- a/internal/service/cloudformation/schemas/AWS_AutoScaling_LaunchConfiguration.json
+++ b/internal/service/cloudformation/schemas/AWS_AutoScaling_LaunchConfiguration.json
@@ -217,7 +217,8 @@
     "create": {
       "permissions": [
         "autoscaling:CreateLaunchConfiguration",
-        "autoscaling:DescribeLaunchConfigurations"
+        "autoscaling:DescribeLaunchConfigurations",
+        "iam:PassRole"
       ]
     },
     "read": {
