--- a/internal/service/cloudformation/schemas/AWS_CloudFormation_HookTypeConfig.json
+++ b/internal/service/cloudformation/schemas/AWS_CloudFormation_HookTypeConfig.json
@@ -56,6 +56,12 @@
   "primaryIdentifier": [
     "/properties/ConfigurationArn"
   ],
+  "tagging": {
+    "taggable": false,
+    "tagOnCreate": false,
+    "tagUpdatable": false,
+    "cloudFormationSystemTags": false
+  },
   "handlers": {
     "create": {
       "permissions": [
