--- a/internal/service/cloudformation/schemas/AWS_IVS_RecordingConfiguration.json
+++ b/internal/service/cloudformation/schemas/AWS_IVS_RecordingConfiguration.json
@@ -32,9 +32,7 @@
           "$ref": "#/definitions/S3DestinationConfiguration"
         }
       },
-      "required": [
-        "S3"
-      ]
+      "required": []
     },
     "S3DestinationConfiguration": {
       "description": "Recording S3 Destination Configuration.",
@@ -63,18 +61,78 @@
           "enum": [
             "INTERVAL",
             "DISABLED"
-          ]
+          ],
+          "default": "INTERVAL"
         },
         "TargetIntervalSeconds": {
-          "description": "Thumbnail recording Target Interval Seconds defines the interval at which thumbnails are recorded. This field is required if RecordingMode is INTERVAL.",
+          "description": "Target Interval Seconds defines the interval at which thumbnails are recorded. This field is required if RecordingMode is INTERVAL.",
           "type": "integer",
-          "minimum": 5,
-          "maximum": 60
+          "minimum": 1,
+          "maximum": 60,
+          "default": 60
+        },
+        "Resolution": {
+          "description": "Resolution indicates the desired resolution of recorded thumbnails.",
+          "type": "string",
+          "enum": [
+            "FULL_HD",
+            "HD",
+            "SD",
+            "LOWEST_RESOLUTION"
+          ]
+        },
+        "Storage": {
+          "description": "Storage indicates the format in which thumbnails are recorded.",
+          "type": "array",
+          "uniqueItems": true,
+          "insertionOrder": false,
+          "minItems": 0,
+          "maxItems": 2,
+          "items": {
+            "type": "string",
+            "enum": [
+              "SEQUENTIAL",
+              "LATEST"
+            ]
+          }
         }
       },
-      "required": [
-        "RecordingMode"
-      ]
+      "required": []
+    },
+    "RenditionConfiguration": {
+      "description": "Rendition Configuration describes which renditions should be recorded for a stream.",
+      "type": "object",
+      "additionalProperties": false,
+      "properties": {
+        "RenditionSelection": {
+          "description": "Resolution Selection indicates which set of renditions are recorded for a stream.",
+          "type": "string",
+          "enum": [
+            "ALL",
+            "NONE",
+            "CUSTOM"
+          ],
+          "default": "ALL"
+        },
+        "Renditions": {
+          "description": "Renditions indicates which renditions are recorded for a stream.",
+          "type": "array",
+          "uniqueItems": true,
+          "insertionOrder": false,
+          "minItems": 0,
+          "maxItems": 4,
+          "items": {
+            "type": "string",
+            "enum": [
+              "FULL_HD",
+              "HD",
+              "SD",
+              "LOWEST_RESOLUTION"
+            ]
+          }
+        }
+      },
+      "required": []
     }
   },
   "properties": {
@@ -82,7 +140,7 @@
       "description": "Recording Configuration ARN is automatically generated on creation and assigned as the unique identifier.",
       "type": "string",
       "pattern": "^arn:aws[-a-z]*:ivs:[a-z0-9-]+:[0-9]+:recording-configuration/[a-zA-Z0-9-]+$",
-      "minLength": 1,
+      "minLength": 0,
       "maxLength": 128
     },
     "Name": {
@@ -123,6 +181,9 @@
     },
     "ThumbnailConfiguration": {
       "$ref": "#/definitions/ThumbnailConfiguration"
+    },
+    "RenditionConfiguration": {
+      "$ref": "#/definitions/RenditionConfiguration"
     }
   },
   "additionalProperties": false,
@@ -144,7 +205,12 @@
     "/properties/RecordingReconnectWindowSeconds",
     "/properties/ThumbnailConfiguration",
     "/properties/ThumbnailConfiguration/RecordingMode",
-    "/properties/ThumbnailConfiguration/TargetIntervalSeconds"
+    "/properties/ThumbnailConfiguration/TargetIntervalSeconds",
+    "/properties/ThumbnailConfiguration/Storage",
+    "/properties/ThumbnailConfiguration/Resolution",
+    "/properties/RenditionConfiguration",
+    "/properties/RenditionConfiguration/RenditionSelection",
+    "/properties/RenditionConfiguration/Renditions"
   ],
   "handlers": {
     "create": {
