--- a/internal/service/cloudformation/schemas/AWS_MSK_Configuration.json
+++ b/internal/service/cloudformation/schemas/AWS_MSK_Configuration.json
@@ -4,6 +4,7 @@
   "definitions": {
     "KafkaVersionsList": {
       "type": "array",
+      "insertionOrder": false,
       "items": {
         "type": "string"
       }
