--- a/internal/service/cloudformation/schemas/AWS_EKS_IdentityProviderConfig.json
+++ b/internal/service/cloudformation/schemas/AWS_EKS_IdentityProviderConfig.json
@@ -181,6 +181,16 @@
       ]
     },
     "list": {
+      "handlerSchema": {
+        "properties": {
+          "ClusterName": {
+            "$ref": "resource-schema.json#/properties/ClusterName"
+          }
+        },
+        "required": [
+          "ClusterName"
+        ]
+      },
       "permissions": [
         "eks:ListIdentityProviderConfigs"
       ]
