--- a/internal/service/cloudformation/schemas/AWS_Chatbot_MicrosoftTeamsChannelConfiguration.json
+++ b/internal/service/cloudformation/schemas/AWS_Chatbot_MicrosoftTeamsChannelConfiguration.json
@@ -111,6 +111,7 @@
     },
     "delete": {
       "permissions": [
+        "chatbot:GetMicrosoftTeamsChannelConfiguration",
         "chatbot:DeleteMicrosoftTeamsChannelConfiguration"
       ]
     },
