--- a/internal/service/cloudformation/schemas/AWS_CloudFormation_HookTypeConfig.json
+++ b/internal/service/cloudformation/schemas/AWS_CloudFormation_HookTypeConfig.json
@@ -84,7 +84,18 @@
       ]
     },
     "list": {
+      "handlerSchema": {
+        "properties": {
+          "TypeName": {
+            "$ref": "resource-schema.json#/properties/TypeName"
+          },
+          "TypeArn": {
+            "$ref": "resource-schema.json#/properties/TypeArn"
+          }
+        }
+      },
       "permissions": [
+        "cloudformation:ListTypes",
         "cloudformation:BatchDescribeTypeConfigurations"
       ]
     }
