--- a/internal/service/cloudformation/schemas/AWS_EMRServerless_Application.json
+++ b/internal/service/cloudformation/schemas/AWS_EMRServerless_Application.json
@@ -321,6 +321,7 @@
       "maxLength": 64
     },
     "WorkerTypeSpecifications": {
+      "description": "The key-value pairs that specify worker type to WorkerTypeSpecificationInput. This parameter must contain all valid worker types for a Spark or Hive application. Valid worker types include Driver and Executor for Spark applications and HiveDriver and TezTask for Hive applications. You can either set image details in this parameter for each worker type, or in imageConfiguration for all worker types.",
       "$ref": "#/definitions/WorkerTypeSpecificationInputMap"
     }
   },
@@ -341,7 +342,8 @@
     "/properties/InitialCapacity",
     "/properties/AutoStartConfiguration",
     "/properties/AutoStopConfiguration",
-    "/properties/NetworkConfiguration"
+    "/properties/NetworkConfiguration",
+    "/properties/ImageConfiguration"
   ],
   "readOnlyProperties": [
     "/properties/Arn",
