--- a/internal/service/cloudformation/schemas/AWS_ServiceCatalogAppRegistry_Application.json
+++ b/internal/service/cloudformation/schemas/AWS_ServiceCatalogAppRegistry_Application.json
@@ -67,7 +67,8 @@
     "create": {
       "permissions": [
         "servicecatalog:CreateApplication",
-        "servicecatalog:TagResource"
+        "servicecatalog:TagResource",
+        "iam:CreateServiceLinkedRole"
       ]
     },
     "read": {
@@ -81,7 +82,8 @@
         "servicecatalog:ListTagsForResource",
         "servicecatalog:TagResource",
         "servicecatalog:UntagResource",
-        "servicecatalog:UpdateApplication"
+        "servicecatalog:UpdateApplication",
+        "iam:CreateServiceLinkedRole"
       ]
     },
     "delete": {
