09/20/2023 CloudFormation schemas in us-east-1; Refresh existing schemas.

--- a/internal/service/cloudformation/schemas/AWS_AppIntegrations_EventIntegration.json
+++ b/internal/service/cloudformation/schemas/AWS_AppIntegrations_EventIntegration.json
@@ -129,7 +129,8 @@
   "handlers": {
     "create": {
       "permissions": [
-        "app-integrations:CreateEventIntegration"
+        "app-integrations:CreateEventIntegration",
+        "app-integrations:TagResource"
       ]
     },
     "read": {
