--- a/internal/service/cloudformation/schemas/AWS_Route53Resolver_ResolverQueryLoggingConfig.json
+++ b/internal/service/cloudformation/schemas/AWS_Route53Resolver_ResolverQueryLoggingConfig.json
@@ -102,7 +102,8 @@
         "logs:ListLogDeliveries",
         "logs:PutResourcePolicy",
         "logs:DescribeResourcePolicies",
-        "logs:DescribeLogGroups"
+        "logs:DescribeLogGroups",
+        "iam:CreateServiceLinkedRole"
       ]
     },
     "read": {
