10/11/2023 CloudFormation schemas in us-east-1; Refresh existing schemas.

--- a/internal/service/cloudformation/schemas/AWS_AppRunner_Service.json
+++ b/internal/service/cloudformation/schemas/AWS_AppRunner_Service.json
@@ -36,6 +36,13 @@
         },
         "CodeConfiguration": {
           "$ref": "#/definitions/CodeConfiguration"
+        },
+        "SourceDirectory": {
+          "type": "string",
+          "description": "Source Directory",
+          "minLength": 1,
+          "maxLength": 4096,
+          "pattern": "[^\\x00]+"
         }
       },
       "required": [
