--- a/internal/service/cloudformation/schemas/AWS_IoT_AccountAuditConfiguration.json
+++ b/internal/service/cloudformation/schemas/AWS_IoT_AccountAuditConfiguration.json
@@ -121,6 +121,9 @@
       "maxLength": 2048
     }
   },
+  "tagging": {
+    "taggable": false
+  },
   "additionalProperties": false,
   "primaryIdentifier": [
     "/properties/AccountId"
