--- a/internal/service/cloudformation/schemas/AWS_ApiGatewayV2_ApiMapping.json
+++ b/internal/service/cloudformation/schemas/AWS_ApiGatewayV2_ApiMapping.json
@@ -1,6 +1,6 @@
 {
   "typeName": "AWS::ApiGatewayV2::ApiMapping",
-  "description": "Schema for AWS::ApiGatewayV2::ApiMapping",
+  "description": "The ``AWS::ApiGatewayV2::ApiMapping`` resource contains an API mapping. An API mapping relates a path of your custom domain name to a stage of your API. A custom domain name can have multiple API mappings, but the paths can't overlap. A custom domain can map only to APIs of the same protocol type. For more information, see [CreateApiMapping](https://docs.aws.amazon.com/apigatewayv2/latest/api-reference/domainnames-domainname-apimappings.html#CreateApiMapping) in the *Amazon API Gateway V2 API Reference*.",
   "sourceUrl": "https://github.com/aws-cloudformation/aws-cloudformation-resource-providers-apigatewayv2.git",
   "properties": {
     "ApiMappingId": {
@@ -8,19 +8,19 @@
       "type": "string"
     },
     "DomainName": {
-      "description": "The domain name",
+      "description": "The domain name.",
       "type": "string"
     },
     "Stage": {
-      "description": "The API stage",
+      "description": "The API stage.",
       "type": "string"
     },
     "ApiMappingKey": {
-      "description": "The API mapping key",
+      "description": "The API mapping key.",
       "type": "string"
     },
     "ApiId": {
-      "description": "The API identifier",
+      "description": "The identifier of the API.",
       "type": "string"
     }
   },
