--- a/internal/service/cloudformation/schemas/AWS_AppSync_DomainNameApiAssociation.json
+++ b/internal/service/cloudformation/schemas/AWS_AppSync_DomainNameApiAssociation.json
@@ -16,7 +16,12 @@
       "type": "string"
     }
   },
-  "taggable": false,
+  "tagging": {
+    "taggable": false,
+    "tagOnCreate": false,
+    "tagUpdatable": false,
+    "cloudFormationSystemTags": false
+  },
   "required": [
     "DomainName",
     "ApiId"
