--- a/internal/service/cloudformation/schemas/AWS_AppSync_SourceApiAssociation.json
+++ b/internal/service/cloudformation/schemas/AWS_AppSync_SourceApiAssociation.json
@@ -123,25 +123,29 @@
     "create": {
       "permissions": [
         "appsync:AssociateSourceGraphqlApi",
-        "appsync:AssociateMergedGraphqlApi"
+        "appsync:AssociateMergedGraphqlApi",
+        "appsync:GetSourceApiAssociation"
       ]
     },
     "read": {
       "permissions": [
-        "appsync:GetSourceApiAssociation"
+        "appsync:GetSourceApiAssociation",
+        "appsync:ListSourceApiAssociations"
       ]
     },
     "update": {
       "permissions": [
         "appsync:GetSourceApiAssociation",
-        "appsync:UpdateSourceApiAssociation"
+        "appsync:UpdateSourceApiAssociation",
+        "appsync:GetSourceApiAssociation"
       ]
     },
     "delete": {
       "permissions": [
         "appsync:GetSourceApiAssociation",
         "appsync:DisassociateSourceGraphqlApi",
-        "appsync:DisassociateMergedGraphqlApi"
+        "appsync:DisassociateMergedGraphqlApi",
+        "appsync:ListSourceApiAssociations"
       ]
     },
     "list": {
