--- a/internal/service/cloudformation/schemas/AWS_MediaPackage_PackagingConfiguration.json
+++ b/internal/service/cloudformation/schemas/AWS_MediaPackage_PackagingConfiguration.json
@@ -491,7 +491,6 @@
       "permissions": [
         "mediapackage-vod:CreatePackagingConfiguration",
         "mediapackage-vod:DescribePackagingConfiguration",
-        "mediapackage-vod:DescribePackagingGroup",
         "mediapackage-vod:TagResource",
         "iam:PassRole"
       ]
@@ -503,6 +502,7 @@
     },
     "delete": {
       "permissions": [
+        "mediapackage-vod:DescribePackagingConfiguration",
         "mediapackage-vod:DeletePackagingConfiguration"
       ]
     },
