--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 example.tf
 terraform.tfplan
 terraform.tfstate
+provider.tf
+examples/resources/awscc_elasticbeanstalk_application/.terraform.lock.hc
 bin/
 dist/
 modules-dev/
