--- a/internal/service/cloudformation/schemas/AWS_ECS_PrimaryTaskSet.json
+++ b/internal/service/cloudformation/schemas/AWS_ECS_PrimaryTaskSet.json
@@ -22,6 +22,12 @@
     "Service",
     "TaskSetId"
   ],
+  "tagging": {
+    "taggable": false,
+    "tagOnCreate": false,
+    "tagUpdatable": false,
+    "cloudFormationSystemTags": false
+  },
   "createOnlyProperties": [
     "/properties/Cluster",
     "/properties/Service"
@@ -38,9 +44,7 @@
       ]
     },
     "read": {
-      "permissions": [
-        ""
-      ]
+      "permissions": []
     },
     "update": {
       "permissions": [
@@ -49,9 +53,7 @@
       ]
     },
     "delete": {
-      "permissions": [
-        ""
-      ]
+      "permissions": []
     }
   }
 }
