--- a/internal/service/cloudformation/schemas/AWS_ApiGateway_BasePathMapping.json
+++ b/internal/service/cloudformation/schemas/AWS_ApiGateway_BasePathMapping.json
@@ -1,24 +1,24 @@
 {
   "typeName": "AWS::ApiGateway::BasePathMapping",
-  "description": "Resource Type definition for AWS::ApiGateway::BasePathMapping",
+  "description": "The ``AWS::ApiGateway::BasePathMapping`` resource creates a base path that clients who call your API must use in the invocation URL.",
   "sourceUrl": "https://github.com/aws-cloudformation/aws-cloudformation-resource-providers-apigateway",
   "additionalProperties": false,
   "properties": {
     "BasePath": {
       "type": "string",
-      "description": "The base path name that callers of the API must provide in the URL after the domain name."
+      "description": "The base path name that callers of the API must provide as part of the URL after the domain name."
     },
     "DomainName": {
       "type": "string",
-      "description": "The DomainName of an AWS::ApiGateway::DomainName resource."
+      "description": "The domain name of the BasePathMapping resource to be described."
     },
     "RestApiId": {
       "type": "string",
-      "description": "The ID of the API."
+      "description": "The string identifier of the associated RestApi."
     },
     "Stage": {
       "type": "string",
-      "description": "The name of the API's stage."
+      "description": "The name of the associated stage."
     }
   },
   "required": [
