--- a/internal/service/cloudformation/schemas/AWS_DataBrew_Project.json
+++ b/internal/service/cloudformation/schemas/AWS_DataBrew_Project.json
@@ -117,7 +117,8 @@
     },
     "update": {
       "permissions": [
-        "databrew:UpdateProject"
+        "databrew:UpdateProject",
+        "iam:PassRole"
       ]
     },
     "delete": {
